Gave borders, set margins, changed font and gave general formatting

--- a/wwr/stlyes/site.plan.rafting.css
+++ b/wwr/stlyes/site.plan.rafting.css
@@ -9,7 +9,7 @@ Fonts are separated by a & */
   --primary-color: #023047   ;
   --secondary-color: #FFB703 ;
   --accent1-color: #219EBC;
-  --accent2-color: #8ECAE6;
+  --accent2-color: #8ecae6;
 
   /* change the values below to your chosen font(s) */
   --heading-font: "Rock Salt";
