--- a/wwr/stlyes/style.css
+++ b/wwr/stlyes/style.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto&family=Rock+Salt&display=swap');
+
 #content {
     max-width: 1600px;
     margin: 0 auto;
@@ -7,6 +9,7 @@ nav a {
     text-align: center;
     color: #E7C24F;
     text-decoration: none;
+    padding: 35px;
 }
 
 #hero-msg h1, #hero-msg h4 {
@@ -17,12 +20,20 @@ main section {
     text-align: center;
 }
 
+main section img{
+    box-sizing: border-box;
+}
+
 #background {
     height: 725px;
 }
 
 body {
     background-color: #E7C24F;
+    font-family: "Rock Salt", "Pacifico", sans-serif;
+    font-size: 22px;
+    margin: 0;
+    padding: 0;
 }
 
 header {
@@ -36,6 +47,9 @@ nav a:hover {
 
 .home-title {
     color: #396E94;
+    font-family: "Roboto", Helvetica, sans-serif;
+    font-size: 2em;
+    margin-top: 10px;
 }
 
 h4 {
@@ -44,23 +58,42 @@ h4 {
 
 .book, .join {
     color: #396E94;
+    background-color: #8ecae6;
     text-decoration: none;
+    font-size: 18px;
+    padding: 15px 30px;
+    margin-top: 50px;
+    border-radius: 5px;
 }
 
 .book:hover, .join:hover {
     color: black;
 }
 
+h2 {
+    margin: 0;
+}
+
 .msg h2{
     color: #396E94;
+    font-family: "Roboto", Helvetica, sans-serif;
+    line-height: 1.5em;
 }
 
 .msg p {
     color: #396E94;
+    font-size: .8em;
+    padding-bottom: 15px;
+}
+
+.msg {
+    padding: 35px;
 }
 
 footer {
     color: #396E94;
+    padding: 25px 50px;
+    margin-top: 200px;
 }
 
 footer a {
@@ -80,10 +113,27 @@ footer p {
     width: 80px;
 }
 
+#logo_link {
+    padding-top: 5px;
+}
+
 .icon {
     width: 80px;
+    padding-top: 10px;
 }
 
 #hero-img {
     width: 100%;
+}
+
+footer .social img {
+    padding-top: 15px;
+}
+
+.rivers-card, .camping-card, .rapids-card {
+    margin: 200px 0;
+}
+
+.card-img {
+    border: 10px solid #396E94;
 }
