--- a/ice/ice_1_style.css
+++ b/ice/ice_1_style.css
@@ -5,14 +5,25 @@ body {
  
 .container {
     display: block;
-    margin: 9px;
+    margin: 0px;
 }
  
 header {
     display: block;
-    margin-right: 10%;
+    margin-right: 0%;
     text-align: center;
 }
+ 
+header p {
+    position: absolute;
+    z-index: 1;
+    color: white;
+    font-size: 24px;
+    font-weight: bold;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
+  }
  
 main {
     display: grid;
@@ -23,18 +34,31 @@ main {
     align-items: center;
     padding-top: 40px;
     padding-bottom: 40px;
-    margin-right: 10%;
+    margin-right: 0%;
 }
  
 #frontend {
     display: block;
     margin: 0 auto;
-  }
+    height: 300px;
+    max-height: 300px;
+    max-width: 100%;
+    width: 100%;
+}
  
 .graphics {
+    width: calc(33.333% - (2 * 3% / 3));
     border-radius: 50%;
+    border-width :15px;
     border: 15px solid #444444;
     width: 200px;
     margin-left: 20%;
     margin-right: 20%;
+}
+ 
+p {
+    text-align: center;
+    font-weight: bold;
+    margin-right: 3%;
+    font-size: 20px;
 }
