--- a/vesen-site/styles/site-plan.css
+++ b/vesen-site/styles/site-plan.css
@@ -5,10 +5,10 @@ Fonts are separated by a | */
 
 :root {
   /* change the values below to your colors from your palette */
-  --primary-color: #232531   ;
+  --primary-color: black;
   --secondary-color: #0F1523 ;
-  --accent1-color: #57606A;
-  --accent2-color: #151828;
+  --accent1-color: #57606A ;
+  --accent2-color: #ffffff;
 
   /* change the values below to your chosen font(s) */
   --heading-font: "Montserrat";
