changed color scheme

--- a/vesen-site/styles/site-plan.css
+++ b/vesen-site/styles/site-plan.css
@@ -6,8 +6,8 @@ Fonts are separated by a | */
 :root {
   /* change the values below to your colors from your palette */
   --primary-color: black;
-  --secondary-color: #0F1523 ;
-  --accent1-color: #57606A ;
+  --secondary-color: #032854 ;
+  --accent1-color: #86878c ;
   --accent2-color: #ffffff;
 
   /* change the values below to your chosen font(s) */
