--- a/vesen-site/styles/vesen.css
+++ b/vesen-site/styles/vesen.css
@@ -1,5 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
 
+/* header css */
+
 body {
     background-color: #032854;
     font-family: "Montserrat";
@@ -10,6 +12,7 @@ header {
     display: flex;
     background-color: black;
     color: white;
+    font-family: "Montserrat";
 }
 
 .containter {
@@ -37,43 +40,29 @@ a {
     margin: 15px;
 }
 
-/* Note each column and row is 142.5px in width and height */
+/* main css */
+
+#vesen {
+    font-size: 3.5em;
+}
 
 main {
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
-    grid-template-rows: repeat(10, 142.5px);
+    text-align: center;
+    color: white;
 }
 
-.artist-name {
-    text-align: center;
+#sleep-paralysis-art {
+    width: 500px;
+    padding-bottom: 50px;
+}
+
+.title {
+    padding-top: 50px;
+    margin-bottom: 5px;
     color: #86878c;
 }
 
-.art {
-    width: 427.5px;
-}
-
-.vesen {
-    grid-column: 2 / 5;
-    grid-row: 2 / 5;
-}
-
-.breezy {
-    grid-column: 7 / 10;
-    grid-row: 2 / 5;
-}
-
-.about {
-    grid-column: 4 / 8;
-    text-align: center;
-    grid-row: 6 / 9;
-    color: #86878c;
-}
-
-.about-art {
-    max-width: 285px;
-}
+/* footer css */
 
 footer {
     height: 120px;
