--- a/vesen-site/styles/08breezy.css
+++ b/vesen-site/styles/08breezy.css
@@ -43,7 +43,7 @@ a {
 
 /* main css */
 
-#vesen {
+#breezy {
     font-size: 3.5em;
 }
 
@@ -52,20 +52,20 @@ main {
     color: white;
 }
 
-.album {
-    margin-bottom: 50px;
-}
-
-#sleep-paralysis-art {
+.album-art {
     width: 510px;
     border: 5px solid #292d39;
     box-shadow: 1px 1px 50px 1px white, -1px -1px 50px 1px white;
     transition: transform 1s ease-in-out, box-shadow 1s ease-in-out;
 }
 
-#sleep-paralysis-art:hover {
+.album-art:hover {
     transform: scale(1.02);
-    box-shadow: 1px 1px 50px 10px white, -1px -1px 50px 10px white, 1px 1px 50px 1px blue, -1px -1px 50px 1px blue;
+    box-shadow: 1px 1px 50px 10px white, -1px -1px 50px 10px white, 1px 1px 50px 1px yellow, -1px -1px 50px 1px yellow;
+}
+
+.album-details {
+    margin-bottom: 50px;
 }
 
 .title {
